# smol-pytorch-cpp

./: .gitignore  CMakeLists.txt  FileStructure.md  README.md  a.out  main.cpp
helper/: helper_functions.cpp  helper_functions.hpp
include/: autograd.hpp  matrixmultiplication.hpp  tensor.hpp
src/: autograd.cpp  matrixmultiplication.cpp  tensor.cpp
